--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                     <p>Приём осуществляется по адресу: Нижняя первомайская, дом 83</p>
                 </div>
                 <div class="cosmetologist">
-                    <img src="D:\Сайты\Фото\Ольга3.jpg" alt="Фотография косметолога Ольги Андреевны"> <!-- Замените на правильный путь, если нужно -->
+                    <img src="Ольга3.jpg" alt="Фотография косметолога Ольги Андреевны"> <!-- Замените на правильный путь, если нужно -->
                 </div>
                 <div class="hero-content-bottom">
                     <h4>Ольга Андреевна</h4>
@@ -601,3 +601,4 @@
     </script>
 </body>
 </html>
+
